<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    tools:context="com.enpara.EnparaApp.AlertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cell_height"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/currency"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/alert_type"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/value"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/time"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alert_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Long press to edit or delete a alert"
            android:gravity="center"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_addAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:srcCompat="@mipmap/ic_plus" />

</RelativeLayout>
