<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:orientation="vertical"
    tools:context="com.enpara.EnparaApp.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="@dimen/cell_height"
                android:text="@string/currency"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

            <TextView
                android:layout_height="@dimen/cell_height"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:text="@string/buy"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

            <TextView
                android:layout_height="@dimen/cell_height"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:text="@string/sell"
                android:gravity="center"
                android:background="@color/fieldHeaderBackground"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_font"
                android:padding="@dimen/field_padding"
                android:layout_marginRight="@dimen/field_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

                <TextView
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/eur"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

                <TextView
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/gold"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_txtUSD_Buy"
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

                <TextView
                    android:id="@+id/home_txtEUR_Buy"
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

                <TextView
                    android:id="@+id/home_txtGOLD_Buy"
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_txtUSD_Sell"
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

                <TextView
                    android:id="@+id/home_txtEUR_Sell"
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

                <TextView
                    android:id="@+id/home_txtGOLD_Sell"
                    android:layout_height="@dimen/cell_height"
                    android:layout_width="match_parent"
                    android:text="@string/usd"
                    android:gravity="center"
                    android:background="@drawable/cell_background"
                    android:layout_marginRight="@dimen/field_padding" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/home_txtLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="loading"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>
